webmonitor/public/stylesheets/TerraMA2WebMonitor.css
:root {
  /* --main-color: #2084b3;
  --hover-color: #005e8a;
  --active-color: #005b85; */

  --main-color: #222d32;
  --hover-color: #212527;
  --active-color: #212a2e;

  --text-main-color: #fff;
  --text-active-color: #fff;
  --text-hover-color: #ccc;
}

.imgs img,
.main-header .logo-mini>img,
.sidebar-mini.sidebar-collapse #dynamic {
  max-height: 40px
}

#content,
#terrama2-map,
.content,
.content-wrapper,
body,
html {
  overflow: hidden!important
}

.content {
  position: relative;
}

#terrama2-map {
  width: 100% !important;
}

.ol-viewport {
  position: absolute!important;
  top: 0
}

.main-header .logo-lg>img {
  max-height: 40px;
  margin-top: -2px;
  margin-left: -2px
}

.main-header {
  background-color: var(--main-color);
  max-height: 65px;
}

#terrama2-layerexplorer,
.sidebar,
.sidebar-menu,
.treeview,
.treeview-menu,
.treeview>span {
  background-color: inherit
}

.main-header .logo,
.main-header .logo:hover {
  background-color: transparent!important
}

img[src=""] {
  display: none
}

.main-header .logo {
  color: #fff!important;
  border-right: none!important;
  margin-top: 5px
}

#nav,
#terrama-header {
  -webkit-transition: -webkit-transform .35s;
  transition: -webkit-transform .35s;
  transition: transform .35s;
  transition: transform .35s, -webkit-transform .35s;
  -webkit-transition: transform .35s;
  -moz-transition: transform .35s;
  -o-transition: transform .35s
}

#mma {
  max-width: 70px
}

#mini-toggle {
  position: absolute;
  bottom: 0;
  color: var(--text-main-color);
  z-index: 1;
  text-align: center;
  width: 100%;
  height: 50px;
  padding-top: 16px;
  background-color: #1e282c
}

.sidebar-collapse #mini-toggle span {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg)
}

/* .footer-monitor {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 8px;
  background-color: grey;
  border-top: solid 4px #000;
  z-index: 99999
} */

/* .main-footer {
  display: none!important
} */

#content {
  height: inherit;
  padding: 0
}

/* #terrama2-layerexplorer li {
  padding: 0 !important
} */

.sidebar-menu {
  overflow: auto !important;
  max-height: 768px !important;
}

.sidebar-menu>div {
  color: #eee
}

/* #alert div,
#analysis div,
#custom div,
#dynamic div,
#static div,
#template div {
  margin-right: 5px;
  margin-left: 25px
} */

/* #alert .pull-right,
#analysis .pull-right,
#custom .pull-right,
#dynamic .pull-right,
#static .pull-right,
#template .pull-right {
  padding-right: 15px
} */

/* .sidebar-mini.sidebar-collapse #alert .pull-right,
.sidebar-mini.sidebar-collapse #analysis .pull-right,
.sidebar-mini.sidebar-collapse #custom .pull-right,
.sidebar-mini.sidebar-collapse #dynamic .pull-right,
.sidebar-mini.sidebar-collapse #static .pull-right,
.sidebar-mini.sidebar-collapse #template .pull-right {
  padding-right: 0
} */

/* .terrama2-layerexplorer-minus,
.terrama2-layerexplorer-plus {
  background-image: none!important;
  float: none!important;
  width: 14px!important
} */

.main-sidebar {
  grid-area: sidebar;
  padding-top: 0 !important;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

.sidebar {
  overflow: auto !important;
  padding-bottom: 0 !important;
}
/* ... */

